Fix : form to custom form & fix text input color dark mode

--- a/src/assets/css/module/custom/form/_custom-input.scss
+++ b/src/assets/css/module/custom/form/_custom-input.scss
@@ -12,6 +12,7 @@
     padding: .75rem .5rem;
     border: 2px solid var(--color-border);
     background-color: var(--color-background-lighter);
+    color: var(--color-text);
 
     &::placeholder {
       color: var(--color-gray-darker-1);
